[package]
name        = "ethrun"
description = "Directly run EVM bytecode (using Parity)"
version     = "0.1.1"
license     = "GPL-3.0"

[[bin]]
name = "ethrun"
path = "ethrun.rs"

[dependencies]
ethcore          = { git = "https://github.com/mbrock/parity" }
ethcore-devtools = { git = "https://github.com/mbrock/parity" }
ethcore-io       = { git = "https://github.com/mbrock/parity" }
ethcore-util     = { git = "https://github.com/mbrock/parity" }
ethkey           = { git = "https://github.com/mbrock/parity" }
rustc-serialize  = "0.3"
serde_json       = "0.8"
