[package]
name        = "ethrun"
description = "Directly run EVM bytecode (using Parity)"
version     = "0.2.4"
license     = "GPL-3.0"

[[bin]]
name = "ethrun"
path = "ethrun.rs"

[dependencies]
ethcore          = { git = "https://github.com/paritytech/parity" }
ethcore-devtools = { git = "https://github.com/paritytech/parity" }
ethcore-io       = { git = "https://github.com/paritytech/parity" }
ethcore-util     = { git = "https://github.com/paritytech/parity" }
ethkey           = { git = "https://github.com/paritytech/parity" }
rustc-serialize  = "0.3"
serde_json       = "0.8"
